maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: identifier expected but integer literal found.
  	while(getY:Int>0 estSurBiscuit)
                       ^Escaper:5: error: ')' expected but '}' found.
  }
  ^