maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  	while(getY:Int>0 estSurBiscuit)
    Nord()
  }

  

  prendBiscuit

  def keepHandOnSideWall(){
    if(estFaceMur){
      droite()
    } else {
      avance()
      gauche()

      if(estFaceMur){
        droite()
      }
    }
  }


def Nord(){
  if(getDirection == Direction.NORTH && estFaceMur){
    avance()

  }

else if (estFaceMur){
  droite()

} else {
  avance()
  gauche()

  if(estFaceMur){
    droite()
  }
}
}